# vulkan-cpp-setup

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
